--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,12 +2,13 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev src/app.ts",
-    "build": "prisma generate && tsc",
-    "postinstall": "prisma generate"
+    "build": "tsc",
+    "start": "node dist/app.js",
+    "vercel-build": "prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -23,13 +24,13 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.16.1",
-    "typescript": "^5.9.2",
     "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/node": "^24.3.3",
+    "prisma": "^6.16.1",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.2"
   }
 }
